--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -22,5 +22,6 @@
   "freelance": "Do you want to hire my services as a freelance? I can diagnose which information security tool for your company or business is the right one according to its size, cost or difficulty of installation, I can develop a web application or software for your company or business. Contact me via Twitter, Discord or Mail along with a brief summary of the project followed by a list of key details to consider in a PDF document. For example:",
   "pdfdoc": "{Project name} Good day I am {Name or alias}, I want a ____ that will allow me to make ____. Here is a list of features that the project should have:________, My (email/twitter/discord) is ________, I look forward to your answer",
   "pdfdoc2": "With all these details explained I can calculate an estimated price and delivery date. Half of the money should be given the first week after signing and sending the contract that will arrive to your mail if your request was accepted, and the other half will be given at the end after finishing the order. I will not give any refund unless the software does not work and I cannot make it work.",
-  "posted_on": "Posted on"
+  "posted_on": "Posted on",
+  "404": "This page doesnt avaliable"
 }
