--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -15,7 +15,7 @@
   "read_more": "Leer mas",
   "go_back": "Atras",
   "me": "Contacto",
-  "whoiam": "Mi nombre es Alejandro Aguilar (aka Rawier), actualmente curso los últimos semestres de la carrera en Ciencias de la informática, también estudio para convertirme en un Hacker Ético para así tener las herramientas necesarias para el trabajo, continuación muestro algunos de mis diplomas:",
+  "whoiam": "Mi nombre es Alejandro Aguilar (aka Rawier), actualmente curso los últimos semestres de la carrera en Ciencias de la informática, también estudio para convertirme en un Hacker Ético para así tener las herramientas necesarias para el trabajo, a continuación muestro algunos de mis diplomas:",
   "text_mail":"Si quieres ponerte en contacto conmigo puedes hacerlo a traves de la direccion de correo. Solo respondo a correros con el asunto: 'PROPUESTA_TRABAJO', 'DUDA_GENERAL' o 'SOCIAL_EVENTO', segun corresponda su caso. (Dudas frecuentes, mas abajo en esta pagina)",
   "contact": "Sobre Mi",
   "faq": "1.- ¿Porque el asunto del correo debe tener esa sintaxis? R: Debido al spam y el marketing dirigido, el asunto es para darle prioridad al correo de lo contrario puede que demore en contestar.",
