--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,6 +1,6 @@
 {
   "job": "Cybersecurity enthusiast",
-  "about-me": "Mexico City. I am currently in the last semesters of my Computer Science degree, I study every day to become an Ethical Hacker. Also in my free time I make videos related to my career in my youtube channel. I love cybersecurity, rock and video games. 👾🛡🎵",
+  "about-me": "Mexico City. Currently in the last semesters of my Computer Science degree, I study every day to become an Ethical Hacker and to have the skills that today's world needs. In my time I make music and multimedia content about my career. I love cybersecurity, rock and video games. 👾🛡🎵",
   "resume": "Get Resume",
   "footer": "© 2023",
   "resume-link": "https://drive.google.com/file/d/1dEso7G-mR2lefWyOxBN_tsn0pYhm2c8z/view?usp=share_link",
