--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -1,6 +1,6 @@
 {
   "job": "Entusiasta por la ciberseguridad",
-  "about-me": "Ciudad de México. Actualmente cursando los últimos semestres de la carrera en Ciencias de la Informática, estudio día a día para convertirme en un Hacker Ético. También en mi tiempo libre hago videos relacionados a mi carrera en mi canal de youtube. Me encanta la ciberseguridad, el rock y los videojuegos. 👾🛡🎵",
+  "about-me": "Ciudad de México. Actualmente cursando los últimos semestres de la carrera en Ciencias de la Informática, estudio día a día para convertirme en un Hacker Ético y para tener las habilidades que el mundo actual necesita. En mi tiempo hago musica y realizo contenido multimedia sobre mi carrera. Me encanta la ciberseguridad, el rock y los videojuegos. 👾🛡🎵",
   "resume": "Descargar CV",
   "footer": "© 2023",
   "resume-link": "https://drive.google.com/file/d/1dEso7G-mR2lefWyOxBN_tsn0pYhm2c8z/view?usp=share_link",
