--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -1,6 +1,6 @@
 {
   "job": "Entusiasta por la ciberseguridad",
-  "about-me": "Ciudad de México. Actualmente cursando la Ingeniería en Sistemas Computacionales, estudio día a día para convertirme en un Hacker Ético y para tener las habilidades que el mundo actual necesita. En mi tiempo hago musica y realizo contenido multimedia sobre mi carrera. Me encanta la ciberseguridad, el rock y los videojuegos.",
+  "about-me": "Ciudad de México. Actualmente cursando la Ingeniería en Sistemas Computacionales, estudio día a día para convertirme en un Hacker Ético y tener las habilidades que el mundo actual necesita. En mi tiempo libre hago música y realizo contenido multimedia sobre mi carrera. Me encanta la ciberseguridad, el rock y los videojuegos.",
   "resume": "Descargar CV",
   "footer": "© 2023",
   "resume-link": "https://drive.google.com/file/d/1dEso7G-mR2lefWyOxBN_tsn0pYhm2c8z/view?usp=share_link",
@@ -15,7 +15,7 @@
   "read_more": "Leer mas",
   "go_back": "Atras",
   "me": "Contacto",
-  "whoiam": "Mi nombre es Alejandro Aguilar (aka Rawier), cursando la Ingeniería en Sistemas Computacionales, también estudio para convertirme en un Hacker Ético para así tener las herramientas necesarias para el trabajo, a continuación muestro algunos de mis diplomas:",
+  "whoiam": "Mi nombre es Alejandro Aguilar (aka Rawier), curso la Ingeniería en Sistemas Computacionales, también estudio para convertirme en Hacker Ético para así tener las herramientas necesarias para el trabajo, a continuación muestro alguno de mis certificados:",
   "text_mail":"Si quieres ponerte en contacto conmigo puedes hacerlo a traves de la direccion de correo. Solo respondo a correros con el asunto: 'PROPUESTA_TRABAJO', 'DUDA_GENERAL' o 'SOCIAL_EVENTO', segun corresponda su caso. (Dudas frecuentes, mas abajo en esta pagina)",
   "contact": "Sobre Mi",
   "faq": "1.- ¿Porque el asunto del correo debe tener esa sintaxis? R: Debido al spam y el marketing dirigido, el asunto es para darle prioridad al correo de lo contrario puede que demore en contestar.",
