--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,6 +1,6 @@
 {
   "job": "Cybersecurity enthusiast",
-  "about-me": "Mexico City. Currently in the last semesters of my Computer Science degree, I study every day to become an Ethical Hacker and to have the skills that today's world needs. In my time I make music and multimedia content about my career. I love cybersecurity, rock and video games.",
+  "about-me": "Mexico City. Currently studying Computer Systems Engineering, I study every day to become an Ethical Hacker and have the skills that today's world needs. In my free time I make music and multimedia content about my career. I love cybersecurity, rock and video games.",
   "resume": "Get Resume",
   "footer": "© 2023",
   "resume-link": "https://drive.google.com/file/d/1dEso7G-mR2lefWyOxBN_tsn0pYhm2c8z/view?usp=share_link",
@@ -15,7 +15,7 @@
   "read_more": "Read more",
   "go_back": "Back",
   "me": "Contact",
-  "whoiam": "My name is Alejandro Aguilar (aka Rawier), I am currently in the last semesters of my degree in Computer Science, I am also studying to become an Ethical Hacker in order to have the necessary tools for the job, here are some of my diplomas:",
+  "whoiam": "My name is Alejandro Aguilar (aka Rawier), I am studying Computer Systems Engineering, I am also studying to become an Ethical Hacker in order to have the necessary tools for the job, here are some of my certificates:",
   "text_mail":"If you want to contact me you can do it through the mail address. I only answer to mails with the subject: 'JOB_PROPOSAL', 'GENERAL_QUEST' or 'SOCIAL_EVENT', according to your case. (Frequently asked questions, further down in this page)",
   "contact": "About Me",
   "faq": "1.- Why should the subject line of the email have this syntax? A: Due to spam and targeted marketing, the subject line is to give priority to the mail otherwise it may take a long time to answer.",
