Change the name and title

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,9 +1,9 @@
 {
-  "job": "Cybersecurity enthusiast",
-  "about-me": "Mexico City. Currently studying Computer Systems Engineering, I study every day to become an Ethical Hacker and have the skills that today's world needs. In my free time I make music and multimedia content about my career. I love cybersecurity, rock and video games.",
-  "resume": "Get Resume",
+  "job": "IT Consultant",
+  "about-me": "Passionate about cybersecurity, I meet challenges with creativity, resilience and perseverance. I am committed to orchestrating a symphony for a better future, pushing boundaries and strengthening cybersecurity one byte at a time!",
+  "resume": "Hire me",
   "footer": "© 2024",
-  "resume-link": "https://drive.google.com/file/d/1dEso7G-mR2lefWyOxBN_tsn0pYhm2c8z/view?usp=share_link",
+  "resume-link": "mailto:rawierdt@gmail.com",
   "languages": "Languages",
   "other": "Tools",
   "cloud": "Cloud Services",
