--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -1,9 +1,9 @@
 {
-  "job": "Entusiasta por la ciberseguridad",
-  "about-me": "Ciudad de México. Actualmente cursando la Ingeniería en Sistemas Computacionales, estudio día a día para convertirme en un Hacker Ético y tener las habilidades que el mundo actual necesita. En mi tiempo libre hago música y realizo contenido multimedia sobre mi carrera. Me encanta la ciberseguridad, el rock y los videojuegos.",
-  "resume": "Descargar CV",
+  "job": "Consultor TI",
+  "about-me": "Apasionado por la seguridad  informática, enfrento los desafíos con creatividad, resiliencia y perseverancia. Estoy comprometido a orquestar una sinfonía para un mejor futuro, ¡Superando límites y fortaleciendo la ciberseguridad un byte a la vez!",
+  "resume": "Contratar",
   "footer": "© 2024",
-  "resume-link": "https://drive.google.com/file/d/1dEso7G-mR2lefWyOxBN_tsn0pYhm2c8z/view?usp=share_link",
+  "resume-link": "mailto:rawierdt@gmail.com",
   "languages": "Lenguajes",
   "other": "Utilidades",
   "cloud": "Servicios Cloud",
