Cambios en blog chess

--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -1,6 +1,6 @@
 {
   "job": "Consultor TI",
-  "about-me": "Desarollador / Comprometido con orquestar una sinfonía para un mejor futuro, ¡Superando límites y fortaleciendo la ciberseguridad un byte a la vez!",
+  "about-me": "Desarrollador / Comprometido con orquestar una sinfonía para un mejor futuro, ¡Superando límites y fortaleciendo la ciberseguridad un byte a la vez!",
   "resume": "Contratar",
   "footer": "© 2024",
   "resume-link": "mailto:rawierdt@gmail.com",
