Update: 👍 en, es lang

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,6 +1,6 @@
 {
   "job": "IT Consultant",
-  "about-me": "Developer / Committed to orchestrating a symphony for a better future, Overcoming boundaries and strengthening cybersecurity one byte at a time!",
+  "about-me": "Developer || Strengthening teams through innovative IT solutions 🖥️🏎️. Let's apply this command: { sudo rm -rf bad_results && cat low_performance.txt > /dev/null } which means let's discard the bad results together.",
   "resume": "Hire me",
   "footer": "© 2024",
   "resume-link": "mailto:rawierdt@gmail.com",
@@ -15,7 +15,7 @@
   "read_more": "Read more",
   "go_back": "Back",
   "me": "Contact",
-  "whoiam": "My name is Alejandro but my friends call me Ale or Nex, I am currently studying Computer Systems Engineering, with a major in Computer Security. I started in this wonderful world at the age of 14 years old creating plugins for the PSP. Currently I support and give feedback to companies in various sectors to improve their IT infrastructure.",
+  "whoiam": "My name is Alejandro but my friends call me <<Ale>> or <<Nex>>, I'm in my last semester of Computer Science Engineering, with a major in Information Security. I started in this wonderful world at the age of 14 years old creating plugins for the Sony PSP console. Currently I give feedback to companies in various sectors to improve their IT infrastructure.",
   "text_mail":"If you want to contact me you can do it through the mail address. I only answer to mails with the subject: 'JOB_PROPOSAL', 'GENERAL_QUEST' or 'SOCIAL_EVENT', according to your case. (Frequently asked questions, further down in this page)",
   "contact": "About Me",
   "faq": "1.- Why should the subject line of the email have this syntax? A: Due to spam and targeted marketing, the subject line is to give priority to the mail otherwise it may take a long time to answer.",
