--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -1,6 +1,6 @@
 {
   "job": "Consultor TI",
-  "about-me": "Desarrollador / Comprometido con orquestar una sinfonía para un mejor futuro, ¡Superando límites y fortaleciendo la ciberseguridad un byte a la vez!",
+  "about-me": "Desarrollador || Fortaleciendo a los equipos mediante soluciones informáticas innovadoras 🖥️🏎️. Apliquemos este comando: { sudo rm -rf bad_results && cat low_performance.txt > /dev/null } que significa desechemos los malos resultados juntos.",
   "resume": "Contratar",
   "footer": "© 2024",
   "resume-link": "mailto:rawierdt@gmail.com",
@@ -15,7 +15,7 @@
   "read_more": "Leer mas",
   "go_back": "Atras",
   "me": "Contacto",
-  "whoiam": "Mi nombre es Alejandro pero mis amigos me llaman Ale o Nex, actualmente curso la Ingeniería en Sistemas Computacionales, con una especialidad en Seguridad Informática. Comence en este maravilloso mundo a la edad de 14 años creando plugins para la PSP. Actualmente apoyo y doy feedback a empresas en diversos sectores a mejorar su infraestructura en TI.",
+  "whoiam": "Mi nombre es Alejandro pero mis amigos me llaman <<Ale>> o <<Nex>>, estoy cursando el ultimo semestre de la Ingeniería en Sistemas Computacionales, con una especialidad en Seguridad Informática. Comencé en este maravilloso mundo a la edad de 14 años creando plugins para la consola PSP. Actualmente doy feedback a empresas en diversos sectores a mejorar su infraestructura de seguridad en TI.",
   "text_mail":"Si quieres ponerte en contacto conmigo puedes hacerlo a traves de la direccion de correo. Solo respondo a correros con el asunto: 'PROPUESTA_TRABAJO', 'DUDA_GENERAL' o 'SOCIAL_EVENTO', segun corresponda su caso. (Dudas frecuentes, mas abajo en esta pagina)",
   "contact": "Sobre Mi",
   "faq": "1.- ¿Porque el asunto del correo debe tener esa sintaxis? R: Debido al spam y el marketing dirigido, el asunto es para darle prioridad al correo de lo contrario puede que demore en contestar.",
