--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -1,8 +1,8 @@
 {
   "job": "Consultor TI",
-  "about-me": "Desarrollador || Fortaleciendo a los equipos mediante soluciones informáticas innovadoras 🖥️🏎️. Apliquemos este comando: { sudo rm -rf bad_results && cat low_performance.txt > /dev/null } que significa desechemos los malos resultados juntos.",
+  "about-me": "Desarrollador || Fortaleciendo a los equipos mediante soluciones informáticas innovadoras 🖥️🏁. Apliquemos este comando: { sudo rm -rf bad_results && cat low_performance.txt > /dev/null } que significa desechemos los malos resultados juntos.",
   "resume": "Contratar",
-  "footer": "© 2024",
+  "footer": "© 2025",
   "resume-link": "mailto:rawierdt@gmail.com",
   "languages": "Lenguajes",
   "other": "Utilidades",
