--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,6 +1,6 @@
 {
   "job": "IT Consultant",
-  "about-me": "Developer || Strengthening teams through innovative IT solutions 🖥️🏁. Let's apply the upgrades and discard the bad results together.",
+  "about-me": "Developer || Strengthening teams through innovative IT solutions. Let's apply the upgrades and discard the bad results together. 🖥️🏁",
   "resume": "Hire me",
   "footer": "© 2025",
   "resume-link": "mailto:rawierdt@gmail.com",
