--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -1,6 +1,6 @@
 {
   "job": "Consultor TI",
-  "about-me": "Desarrollador || Fortaleciendo a los equipos mediante soluciones informáticas innovadoras. Apliquemos las actualizaciones y desechemos los malos resultados juntos. 🖥️🏁",
+  "about-me": "Desarrollador || Fortaleciendo a los equipos mediante soluciones informáticas innovadoras. Apliquemos las actualizaciones y eliminemos los malos resultados juntos.",
   "resume": "Contratar",
   "footer": "© 2025",
   "resume-link": "mailto:rawierdt@gmail.com",
