--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,7 +1,7 @@
 {
   "job": "IT Consultant",
-  "about-me": "Developer || Strengthening teams through innovative IT solutions. Let's apply the upgrades and discard the bad results together.",
-  "resume": "Hire me",
+  "about-me": "Developer || Let's Hack the teams through innovative IT solutions. Let's apply the upgrades and discard the bad results together.",
+  "resume": "Get CV",
   "footer": "© 2025",
   "resume-link": "mailto:rawierdt@gmail.com",
   "languages": "Languages",
@@ -15,14 +15,11 @@
   "read_more": "Read more",
   "go_back": "Back",
   "me": "Contact",
-  "whoiam": "My name is Alejandro but my friends call me <<Ale>> or <<Nex>>, I'm in my last semester of Computer Science Engineering, with a major in Information Security. I started in this wonderful world at the age of 14 years old creating plugins for the Sony PSP console. Currently I give feedback to companies in various sectors to improve their IT infrastructure.",
-  "text_mail":"If you want to contact me you can do it through the mail address. I only answer to mails with the subject: 'JOB_PROPOSAL', 'GENERAL_QUEST' or 'SOCIAL_EVENT', according to your case. (Frequently asked questions, further down in this page)",
+  "whoiam": "My name is Alejandro but my friends call me <<Ale>> or <<Nex>>, I'm in my last semester of Computer Systems Engineering, with a major in Computer Security. I started in this wonderful world at the age of 14 years old creating plugins for the PSP console and some mods for Minecraft. Currently I strengthen my skills in Ethical Hacking and Research through OSINT.",
+  "text_mail":"If you want to contact me you can do it through the email address. I only respond to encrypted or verified e-mails and with subject.",
   "contact": "About Me",
-  "faq": "1.- Why should the subject line of the email have this syntax? A: Due to spam and targeted marketing, the subject line is to give priority to the mail otherwise it may take a long time to answer.",
-  "freelance": "Do you want to hire my services as a freelance? I can diagnose which information security tool for your company or business is the right one according to its size, cost or difficulty of installation, I can develop a web application or software for your company or business. Contact me via Twitter, Discord or Mail along with a brief summary of the project followed by a list of key details to consider in a PDF document. For example:",
-  "pdfdoc": "{Project name} Good day I am {Name or alias}, I want a ____ that will allow me to make ____. Here is a list of features that the project should have:________, My (email/twitter/discord) is ________, I look forward to your answer",
-  "pdfdoc2": "With all these details explained I can calculate an estimated price and delivery date. Half of the money should be given the first week after signing and sending the contract that will arrive to your mail if your request was accepted, and the other half will be given at the end after finishing the order. I will not give any refund unless the software does not work and I cannot make it work.",
+  "faq": "Why the mail must have all that? A: Because of spam and targeted marketing, I have a rule that filters the mails so it may get lost if it does not meet those requirements, the issue is to prioritize the mail otherwise it may take a long time to reply.",
   "posted_on": "Posted on",
-  "404": "This page doesnt avaliable",
+  "404": "This page doesn't available",
   "projects": "Portfolio"
 }
