--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -1,7 +1,7 @@
 {
   "job": "Consultor TI",
-  "about-me": "Desarrollador || Fortaleciendo a los equipos mediante soluciones informáticas innovadoras. Apliquemos las actualizaciones y eliminemos los malos resultados juntos.",
-  "resume": "Contratar",
+  "about-me": "Desarrollador | Fortalezcamos los equipos mediante soluciones informáticas innovadoras. Apliquemos juntos las mejoras y desechemos los malos resultados",
+  "resume": "Obtener CV",
   "footer": "© 2025",
   "resume-link": "mailto:rawierdt@gmail.com",
   "languages": "Lenguajes",
@@ -15,13 +15,10 @@
   "read_more": "Leer mas",
   "go_back": "Atras",
   "me": "Contacto",
-  "whoiam": "Mi nombre es Alejandro pero mis amigos me llaman <<Ale>> o <<Nex>>, estoy cursando el ultimo semestre de la Ingeniería en Sistemas Computacionales, con una especialidad en Seguridad Informática. Comencé en este maravilloso mundo a la edad de 14 años creando plugins para la consola PSP. Actualmente doy feedback a empresas en diversos sectores a mejorar su infraestructura de seguridad en TI.",
-  "text_mail":"Si quieres ponerte en contacto conmigo puedes hacerlo a traves de la direccion de correo. Solo respondo a correros con el asunto: 'PROPUESTA_TRABAJO', 'DUDA_GENERAL' o 'SOCIAL_EVENTO', segun corresponda su caso. (Dudas frecuentes, mas abajo en esta pagina)",
+  "whoiam": "Mi nombre es Alejandro pero mis amigos me llaman <<Ale>> o <<Nex>>, estoy cursando el ultimo semestre de la Ingeniería en Sistemas Computacionales, con una especialidad en Seguridad Informática. Comencé en este maravilloso mundo a la edad de 14 años creando plugins para la consola PSP y algunos mods para Minecraft. Actualmente fortalezco mis habilidades en Hacking Ético e Investigación mediante OSINT.",
+  "text_mail":"Si quieres ponerte en contacto conmigo puedes hacerlo a través de la dirección de correo. Solo respondo a correros cifrados o verificados y con asunto.",
   "contact": "Sobre Mi",
-  "faq": "1.- ¿Porque el asunto del correo debe tener esa sintaxis? R: Debido al spam y el marketing dirigido, el asunto es para darle prioridad al correo de lo contrario puede que demore en contestar.",
-  "freelance": "¿Quieres contratar mis servicios como freelance? Puedo diagnosticar cual herramienta  de seguridad informatica para tu empresa o negocio es la adecuada según su tamaño, costo o dificultad de instalación, puedo desarrollar una aplicación web o software para su empresa o negocio. Contacte conmigo via Twitter, Discord o Correo junto a un breve resumen del proyecto seguido de una lista de detalles clave a tener en cuenta en un documento PDF. Por ejemplo:",
-  "pdfdoc": "{Nombre del proyecto} Buen día soy {Nombre o alias}, quiero un ____ que me permita hacer ____. Esta es una lista de características que el proyecto debe tener:_____, Mi (correo/twitter/discord) es ________, espero su respuesta.",
-  "pdfdoc2": "Con todos esto los detalles explicados puedo calcular un precio estimado y una fecha de entrega. La mitad del dinero debe entregarse la primer semana una vez firmado y enviado el contrato que llegará a su correo si su petición fue aceptada, y la otra mitad se dará al final una vez terminado el pedido. No haré ninguna devolución a no ser que el software no funcione y no pueda hacerlo funcionar.",
+  "faq": "¿Por qué el correo debe tener todo eso? R: Debido al spam y el marketing dirigido, tengo una regla que filtra los correos por lo que puede que se pierda si no cumple con esos requisitos, el asunto es para darle prioridad al correo de lo contrario puede que demore en contestar.",
   "posted_on": "Publicado el",
   "404": "Esta pagina no esta disponible",
   "projects": "Portafolio"
