--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -21,5 +21,5 @@
   "faq": "Why the mail must have all that? A: Because of spam and targeted marketing, I have a rule that filters the mails so it may get lost if it does not meet those requirements, the issue is to prioritize the mail otherwise it may take a long time to reply.",
   "posted_on": "Posted on",
   "404": "This page doesn't available",
-  "projects": "Portfolio"
+  "projects": "Projects"
 }
