Update: about index

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -7,9 +7,12 @@
   "languages": "Languages",
   "other": "Tools",
   "cloud": "Cloud Services",
+  "clouds_bd": "Clouds and DB",
   "education": "Education",
   "comunication": "Networking",
+  "frameworks_lib": "Frameworks and libraries",
   "skills": "Knowledge and experience with: ",
+  "tools": "Tools",
   "button_skills": "Skills",
   "button_blog": "Blog",
   "read_more": "Read more",
