--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -7,9 +7,12 @@
   "languages": "Lenguajes",
   "other": "Utilidades",
   "cloud": "Servicios Cloud",
+  "clouds_bd": "Nubes y BD",
   "education": "Educación",
   "comunication": "Redes",
+  "frameworks_lib": "Frameworks y librerias",
   "skills": "Conocimientos y experiencia en: ",
+  "tools": "Herramientas",
   "button_skills": "Habilidades",
   "button_blog": "Blog",
   "read_more": "Leer mas",
