Update: about index

--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -17,7 +17,7 @@
   "button_blog": "Blog",
   "read_more": "Leer mas",
   "go_back": "Atras",
-  "me": "Contacto",
+  "me": "Sobre mi",
   "whoiam": "Mi nombre es Alejandro pero mis amigos me llaman <<Ale>> o <<Nex>>, estoy cursando el ultimo semestre de la Ingeniería en Sistemas Computacionales, con una especialidad en Seguridad Informática. Comencé en este maravilloso mundo a la edad de 14 años creando plugins para la consola PSP y algunos mods para Minecraft. Actualmente fortalezco mis habilidades en Hacking Ético e Investigación mediante OSINT.",
   "text_mail":"Si quieres ponerte en contacto conmigo puedes hacerlo a través de la dirección de correo. Solo respondo a correros cifrados o verificados y con asunto.",
   "contact": "Sobre Mi",
