--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -17,7 +17,7 @@
   "button_blog": "Blog",
   "read_more": "Read more",
   "go_back": "Back",
-  "me": "Contact",
+  "me": "About",
   "whoiam": "My name is Alejandro but my friends call me <<Ale>> or <<Nex>>, I'm in my last semester of Computer Systems Engineering, with a major in Computer Security. I started in this wonderful world at the age of 14 years old creating plugins for the PSP console and some mods for Minecraft. Currently I strengthen my skills in Ethical Hacking and Research through OSINT.",
   "text_mail":"If you want to contact me you can do it through the email address. I only respond to encrypted or verified e-mails and with subject.",
   "contact": "About Me",
