--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -24,5 +24,7 @@
   "faq": "Why the mail must have all that? A: Because of spam and targeted marketing, I have a rule that filters the mails so it may get lost if it does not meet those requirements, the issue is to prioritize the mail otherwise it may take a long time to reply.",
   "posted_on": "Posted on",
   "error_notfound_one": "Time bends, but this page remains lost.",
-  "projects": "Projects"
+  "error_notfound_two": "Rewind your search, or journey back home to the beginning.",
+  "projects": "PROJECTS",
+  "projectsDesc": "Here are some of my most recent projects and contributions"
 }
