--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -2,6 +2,7 @@
   "job": "IT Consultant",
   "about-me": "Developer || Let's Hack the teams through innovative IT solutions. Let's apply the upgrades and discard the bad results together.",
   "resume": "Get CV",
+  "machines": "Machines",
   "footer": "© 2025",
   "resume-link": "mailto:rawierdt@gmail.com",
   "languages": "Languages",
