--- a/locales/es/index.json
+++ b/locales/es/index.json
@@ -2,6 +2,7 @@
   "job": "Consultor TI",
   "about-me": "Desarrollador | Fortalezcamos los equipos mediante soluciones informáticas innovadoras. Apliquemos juntos las mejoras y desechemos los malos resultados",
   "resume": "Obtener CV",
+  "machines": "Máquinas",	
   "footer": "© 2025",
   "resume-link": "mailto:rawierdt@gmail.com",
   "languages": "Lenguajes",
